tests/ui/inference/cannot-infer-closure-circular.stderr
error[E0282]: type annotations needed for `Result<(), _>`
  --> $DIR/cannot-infer-closure-circular.rs:7:14
   |
LL |     let x = |r| {
   |              ^
LL |         let v = r?;
LL |         Ok(v)
   |         ----- type must be known at this point
   |
help: consider giving this closure parameter an explicit type, where the type for type parameter `E` is specified
   |
LL |     let x = |r: Result<_, E>| {
   |               ++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
